# weight-tracker

./: .gitignore  README.md  pyproject.toml
src/: graph.py  gui.py  main.py
weight_tracker/src/: graph.py  gui.py  main.py
