[tool.poetry]
name = "weight-tracker"
version = "0.1.0"
description = ""
authors = ["veledara <71222580+veledara@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "weight_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
sv-ttk = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
